feat(profile): user can update and view profile (#26)
- create RESTful API routes to update profile
- create RESTful API routes to see profile
- add tests for all routes
- add validation for routes

[Delivers #167377540]
